# carbonometre

./: .gitignore  LICENSE  README.md  app.py  launch.sh  pyproject.toml  requirements.txt
carbonometre/: __init__.py  calculations.py  constants.py  excel_io.py  factor_catalog.py  missions_bridge.py
cerege/1998/ADMIN_GESTION/: camavinga_bilan_annuel.xlsx  tchouameni_bilan_annuel.xlsx
cerege/1998/CLIMAT/: barthez_bilan_annuel.xlsx  deschamps_bilan_annuel.xlsx  henry_bilan_annuel.xlsx  lizarazu_bilan_annuel.xlsx  thuram_bilan_annuel.xlsx  vieira_bilan_annuel.xlsx  zidane_bilan_annuel.xlsx
cerege/1998/ENV_DURABLE/: blanc_bilan_annuel.xlsx  boghossian_bilan_annuel.xlsx  dugarry_bilan_annuel.xlsx  karembeu_bilan_annuel.xlsx  makelele_bilan_annuel.xlsx  petit_bilan_annuel.xlsx  trezeguet_bilan_annuel.xlsx
cerege/1998/RHC/: benzema_bilan_annuel.xlsx  giroud_bilan_annuel.xlsx  griezmann_bilan_annuel.xlsx  kante_bilan_annuel.xlsx  mbappe_bilan_annuel.xlsx  pogba_bilan_annuel.xlsx  varane_bilan_annuel.xlsx
cerege/1998/SAR/: coman_bilan_annuel.xlsx  dembele_bilan_annuel.xlsx  hernandez_bilan_annuel.xlsx  kounde_bilan_annuel.xlsx  lloris_bilan_annuel.xlsx  pavard_bilan_annuel.xlsx  saliba_bilan_annuel.xlsx
cerege/1998/TERRE_PLANETES/: abidal_bilan_annuel.xlsx  evra_bilan_annuel.xlsx  gallas_bilan_annuel.xlsx  nasri_bilan_annuel.xlsx  pires_bilan_annuel.xlsx  ribery_bilan_annuel.xlsx  wiltord_bilan_annuel.xlsx
cerege/2026/CLIMAT/: jdog_bilan_annuel.xlsx
labs/: cerege.toml  factors_catalog.xlsx  factors_plateforme.xlsx
(+1 files in other folders)
