[project]
name = "carbonometre"
version = "0.1.0"
description = "MVP local Carbonometre CEREGE"
readme = "README.md"
requires-python = ">=3.11,<4"
dependencies = [
    "streamlit>=1.41.0",
    "altair>=5.0.0",
    "pandas>=2.3.3",
    "numpy>=2.3.3",
    "openpyxl>=3.1.5",
    "xlsxwriter>=3.2.9",
    "odfpy>=1.4.1",
    "geopy>=2.4.0",
    "orjson>=3.11.3",
    "matplotlib>=3.10.6",
    "basemap>=2.0.0",
    "configparser>=6.0.0",
]

[tool.uv]
package = false
